<resources>
    <string name="app_name">ByWay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="mainactivity_hint_username">Username</string>
    <string name="mainactivity_hint_password">Password</string>
    <string name="mainactivity_login">Log In</string>
    <string name="newuserquestion">New User ?</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapsactivity_hint_starting_location">Riding from current location</string>
    <string name="mapsactivity_hint_destination">Enter your destination</string>
    <string name="appbar_mode_edit">Edit Mode</string>
    <string name="appbar_share">Share This App</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome_swipe_share">SHARE</string>
    <string name="welcome_swipe_ride">RIDE</string>
    <string name="welcome_swipe_neutral">SWIPE</string>
    <string name="welcome_swipe_neutral_header">Swipe up/down</string>
    <string name="mapsactivity_help_text">Help</string>
    <string name="mapsactivity_view_ride_details">Ride Details</string>
    <string name="mapsactivity_hint_source">Enter source location</string>
    <string name="mainactivity_hint_email">Email</string>
    <string name="mainactivity_signup">Sign Up</string>
    <string name="mainactivity_question_user">Already registered ?</string>
    <string name="mainactivity_set_password">Set Password</string>
    <string name="mapsactivity_fab_my_location">My Location</string>
    <string name="mapsactivity_fab_view_coriders">View all co-riders</string>
    <string name="mapsactivity_fab_ride_from_current_location">Ride from current location</string>
</resources>
